--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -13,10 +13,16 @@ header {
 header h1{
     line-height: 140%;
     padding: 0.5rem;
+    background-image: url(utahtechimages/utahtechlogo.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    padding-left: 1em;
+    margin-bottom: 0;
 }
 nav {
     background-color: #f3f3f3;
     font-weight: bold;
+    padding: 0.5rem 0.5rem 0.5rem 2rem;
 }
 h2 {
     color: #424242;
@@ -34,9 +40,41 @@ footer {
     font-size: .70rem;
     font-style: italic;
     text-align: center;
+    padding: 1rem;
 }
 #wrapper {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
+    background-color: #ffffff;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: 0px 3px 3px rgba(66, 66, 66, 0.3);
+}
+h3 {
+    color: #003058;
+}
+main {
+    padding: 0 2rem;
+}
+#homehero {
+    height: 300px;
+    background-image: url(utahtechimages/homehero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#studenthero {
+    height: 300px;
+    background-image: url(utahtechimages/studenthero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+#facultyhero {
+    height: 300px;
+    background-image: url(utahtechimages/facultyhero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
