--- a/utahtech3/style.css
+++ b/utahtech3/style.css
@@ -23,6 +23,7 @@ nav {
     background-color: #f3f3f3;
     font-weight: bold;
     padding: 0.5rem 0.5rem 0.5rem 2rem;
+    nav a { text-decoration: none; }
 }
 h2 {
     color: #424242;
