--- a/utahtech4/style.css
+++ b/utahtech4/style.css
@@ -1,14 +1,24 @@
+* { 
+    box-sizing: border-box; 
+}
 body {
     background-color: #ffffff;
     color: #666666;
     font-family: verdana, Arial, sans-serif;
     background-image: linear-gradient(to bottom, #eeeeee, #ffffff);
     background-attachment: fixed;
+    margin:0;
 }
 header {
     background-color: #003058;
     color: #ffffff;
     font-family: Georgia, serif;
+    grid-row: 1 / 2;
+    grid-column: 2 / -2;
+}
+header a{
+    color: #ffffff;
+    text-decoration: none;
 }
 header h1{
     line-height: 140%;
@@ -17,13 +27,34 @@ header h1{
     background-position: right;
     background-repeat: no-repeat;
     padding-left: 1em;
-    margin-bottom: 0;
+    margin: 0;
 }
 nav {
-    background-color: #f3f3f3;
+    background-color: #424242;
     font-weight: bold;
-    padding: 0.5rem 0.5rem 0.5rem 2rem;
-    nav a { text-decoration: none; }
+    padding: 0;
+    position: sticky;
+    top: 0;
+}
+nav a:hover {
+    background-color: #ba1c21;
+}
+nav a {
+     text-decoration: none; 
+     color: #ffffff;
+     padding: 1rem 0rem;
+     display: block;
+     text-align: center;
+    }
+nav ul {
+    margin: 0px;
+    padding: 0;
+    display: flex;
+    flex-flow: row nowrap;
+    list-style-type: none;
+}
+nav ul li {
+    width: 100%;
 }
 h2 {
     color: #424242;
@@ -44,13 +75,9 @@ footer {
     padding: 1rem;
 }
 #wrapper {
-    width: 80%;
-    margin-right: auto;
-    margin-left: auto;
-    background-color: #ffffff;
-    min-width: 960px;
-    max-width: 2048px;
-    box-shadow: 0px 3px 3px rgba(66, 66, 66, 0.3);
+    display:grid;
+    grid-auto-rows: minmax(0px,auto);
+    grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
 }
 h3 {
     color: #003058;
@@ -78,4 +105,24 @@ main {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+nav {
+    grid-row: 2 / 3;
+    grid-column: 2 / -2;
+}
+#homehero, #studenthero, #facultyhero {
+    grid-row: 3 / 4;
+    grid-column: 2 / -2;
+}
+main {
+    grid-row: 4 / 5;
+    grid-column: 2 / -2;
+}
+footer {
+    grid-row: 5 / 6;
+    grid-column: 2 / -2;
+}
+main img {
+    padding-left: 2rem;
+    float: right;
 }
