--- a/Milestone3/style.css
+++ b/Milestone3/style.css
@@ -12,11 +12,18 @@ header {
 }
 nav {
     grid-row: 2 / 3;
-    grid-column: 2 / -2;
+    grid-column: 1 / -1;
     background-color: red;
     min-height: 20px;
 }
 main {
+    grid-row: 3 / 4;
+    grid-column: 1 / -1;
+    display: grid;
+    background-color: yellow;
+    min-height: 200px;
+}
+section {
     grid-row: 3 / 4;
     grid-column: 1 / -1;
     background-color: yellow;
@@ -26,5 +33,5 @@ main {
     grid-row: 4 / 5;
     grid-column: 1 / -1;
     background-color: blue;
-    min-height: 30px;
+    min-height: 20px;
 }
