--- a/Milestone3/style.css
+++ b/Milestone3/style.css
@@ -3,35 +3,45 @@
     grid-auto-rows: minmax(0px,auto);
     grid-template-columns: minmax(0px, 1fr) repeat(6, minmax(0, 175px)) minmax(0px, 1fr);
 }
-header {
+#header {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
-    background-color: green;
+    background-color: rgba(0, 255, 0, 0.7);
     min-height: 50px;
     text-align: center;
 }
-nav {
+#nav {
     grid-row: 2 / 3;
     grid-column: 1 / -1;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.7);
+    
     min-height: 20px;
 }
-main {
+#background {
     grid-row: 3 / 4;
     grid-column: 1 / -1;
     display: grid;
-    background-color: yellow;
+    background-color: rgba(255, 255, 0, 0.7);
     min-height: 200px;
 }
-section {
-    grid-row: 3 / 4;
-    grid-column: 1 / -1;
-    background-color: yellow;
-    min-height: 200px;
+.hero {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-color: rgba(0, 0, 0, 0.6);
 }
-.gallery {
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+main {
     grid-row: 4 / 5;
     grid-column: 1 / -1;
-    background-color: blue;
-    min-height: 20px;
+    background-color: rgba(0, 0, 255, 0.7);
+    min-height: 30px;
+}
+.gallery {
+    
 }
